chore: add context for conflict rpc creation
