# manager/docs/swagger.json
@@ -371,7 +371,7 @@
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/responses.ConflictResponse"
+                            "$ref": "#/definitions/responses.ConflictResponseWithoutContext"
                         }
                     },
                     "500": {
@@ -1044,6 +1044,12 @@
                             "$ref": "#/definitions/responses.BadRequestResponse"
                         }
                     },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ConflictResponse-CreateRpcCtx"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -1522,6 +1528,14 @@
                 }
             }
         },
+        "CreateRpcCtx": {
+            "type": "object",
+            "properties": {
+                "uuid": {
+                    "type": "string"
+                }
+            }
+        },
         "CreateRpcReq": {
             "type": "object",
             "required": [
@@ -1731,7 +1745,27 @@
                 }
             }
         },
-        "responses.ConflictResponse": {
+        "responses.ConflictResponse-CreateRpcCtx": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "context": {
+                    "$ref": "#/definitions/CreateRpcCtx"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Conflict"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 409
+                }
+            }
+        },
+        "responses.ConflictResponseWithoutContext": {
             "type": "object",
             "properties": {
                 "code": {
